# tiktok_research

./: .env  .env.example  annotate.py  chunking.py  cohort_selection.py  config.py  final_labels.py  label_parsing.py  ollama_client.py  prompts.py  pyproject.toml  reporting.py  run_pipeline.py  schema.sql  stability.py  validation.py
.claude/: settings.local.json
tests/: test_parsing.py
